@@ -3842,16 +3842,7 @@ if ( !class_exists('CoursePress') ) {
 
         function output_buffer() {
             // if( defined('DOING_AJAX') && DOING_AJAX ) { cp_write_log('doing ajax'); }
-            $page = !empty($_GET['page']) ? $_GET['page'] : '';
-
-            $cp_pages = array( 'courses', 'course_details', 'instructors', 'students', 'assessment', 'reports', 'notifications', 'discussions', 'coursepress-pro_settings' );
-
-            if ( is_admin() && (isset($page) && !empty($page)) && (in_array($page, $cp_pages)) ) {
-                //ob_start("minify_output");
-                ob_start();
-            } else {
-                ob_start();
-            }
+            ob_start();
         }
 
         /* Check if user is currently active on the website */
